setup, prefer opengl over vaapi

--- a/mpv.conf
+++ b/mpv.conf
@@ -28,7 +28,7 @@ keep-open=always
 ##################
 
 # Specify default video driver (see --vo=help for a list).
-vo=vaapi,xv,opengl,x11
+vo=opengl,xv,vaapi,x11
 
 # Start in fullscreen mode by default.
 #fs=yes
