mpv: disable fullscreen key

--- a/input.conf
+++ b/input.conf
@@ -145,7 +145,8 @@ s cycle sub                            # cycle through subtitles
 #_ cycle video
 #TAB cycle program
 #T cycle ontop                          # toggle video window ontop of other windows
-#f cycle fullscreen                     # toggle fullscreen
+# f cycle fullscreen                     # toggle fullscreen
+f foobar
 #s screenshot                           # take a screenshot
 #S screenshot video                     # ...without subtitles
 #Alt+s screenshot - each-frame          # automatically screenshot every frame
