--- a/mpv.conf
+++ b/mpv.conf
@@ -103,6 +103,14 @@ autofit-larger=90%x90%
 # Change subtitle encoding. For Arabic subtitles use 'cp1256'.
 # If the file seems to be valid UTF-8, prefer UTF-8.
 #sub-codepage=utf8:cp1256
+#
+
+# Specify the OSD/sub font size. The unit is the size in scaled pixels at a
+# window height of 720. The actual pixel size is scaled with the window height:
+# if the window height is larger or smaller than 720, the actual size of the
+# text increases or decreases as well.
+# Default: 55.
+osd-font-size=30
 
 # Enable hardware decoding if available. Often, this requires using an certain
 # video output, otherwise no hardware decoding will be used.
