--- a/input.conf
+++ b/input.conf
@@ -170,6 +170,7 @@ f foobar
 #! add chapter -1                       # skip to previous chapter
 #@ add chapter 1                        #         next
 #E cycle edition                        # next edition
+7 cycle-values loop "inf" "no"         # toggle infinite looping
 #A cycle angle
 #U stop
 
