--- a/input.conf
+++ b/input.conf
@@ -100,13 +100,13 @@ q quit_watch_later
 #q {encode} quit
 #ESC quit
 #p cycle pause                          # toggle pause/playback mode
-. frame_step                           # advance one frame and pause
-, frame_back_step                      # go back by one frame and pause
+> frame_step                           # advance one frame and pause
+< frame_back_step                      # go back by one frame and pause
 #SPACE cycle pause
-> playlist_next                        # skip to next file
+. playlist_next                        # skip to next file
 n playlist_next                        # skip to next file
 #ENTER playlist_next force              # skip to next file or quit
-< playlist_prev                        # skip to previous file
+, playlist_prev                        # skip to previous file
 p playlist_prev                        # skip to previous file
 o osd                                  # cycle through OSD mode
 #I show_text "${filename}"              # display filename in osd
@@ -146,12 +146,12 @@ s cycle sub                            # cycle through subtitles
 #TAB cycle program
 #T cycle ontop                          # toggle video window ontop of other windows
 # f cycle fullscreen                     # toggle fullscreen
-f foobar
+f ignore
 #s screenshot                           # take a screenshot
 #S screenshot video                     # ...without subtitles
 #Alt+s screenshot - each-frame          # automatically screenshot every frame
-#w add panscan -0.1                     # zoom out with -panscan 0 -fs
-#e add panscan +0.1                     #      in
+w add panscan -0.1                     # zoom out with -panscan 0 -fs
+e add panscan +0.1                     #      in
 #POWER quit
 #MENU cycle osd
 #PLAY cycle pause
