--- a/mpv.conf
+++ b/mpv.conf
@@ -35,7 +35,7 @@ vo=opengl,vaapi,x11,xv
 
 # force starting with centered window
 geometry=50%:50%
-osd-level=3
+osd-level=1
 
 # don't allow a new window to have a size larger than 90% of the screen size
 autofit=100%x100%
@@ -110,7 +110,7 @@ autofit-larger=90%x90%
 # if the window height is larger or smaller than 720, the actual size of the
 # text increases or decreases as well.
 # Default: 55.
-osd-font-size=30
+# osd-font-size=30
 
 # Enable hardware decoding if available. Often, this requires using an certain
 # video output, otherwise no hardware decoding will be used.
