--- a/input.conf
+++ b/input.conf
@@ -103,13 +103,16 @@ q quit_watch_later
 > frame_step                           # advance one frame and pause
 < frame_back_step                      # go back by one frame and pause
 #SPACE cycle pause
-. playlist_next                        # skip to next file
+#. playlist_next                        # skip to next file
 n playlist_next                        # skip to next file
 #ENTER playlist_next force              # skip to next file or quit
-, playlist_prev                        # skip to previous file
+#, playlist_prev                        # skip to previous file
+. script-binding progressbar/step-forward
+, script-binding progressbar/step-backward
 p playlist_prev                        # skip to previous file
-o osd                                  # cycle through OSD mode
-#I show_text "${filename}"              # display filename in osd
+# o osd-bar cycle_values osd-level 3 1                          # cycle through OSD mode
+# display playlist pos and filename in osd
+I show_text "[${playlist-pos} / ${playlist-count}] ${filename}"
 #P show_progress
 z add sub-delay -0.1                   # subtract 100 ms delay from subs
 x add sub-delay +0.1                   # add
@@ -120,10 +123,10 @@ x add sub-delay +0.1                   # add
 #( add balance -0.1                     # adjust audio balance in favor of left
 #) add balance 0.1                      #                                  right
 #m cycle mute
-4 add contrast -10
-5 add contrast 10
-6 add brightness -10
-7 add brightness 10
+# 4 add contrast -10
+# 5 add contrast 10
+# 6 add brightness -10
+# 7 add brightness 10
 # 8 add gamma -1
 # 9 add gamma 1
 8 add saturation -10
@@ -146,7 +149,7 @@ s cycle sub                            # cycle through subtitles
 #TAB cycle program
 #T cycle ontop                          # toggle video window ontop of other windows
 # f cycle fullscreen                     # toggle fullscreen
-f ignore
+# f ignore
 #s screenshot                           # take a screenshot
 #S screenshot video                     # ...without subtitles
 #Alt+s screenshot - each-frame          # automatically screenshot every frame
@@ -171,6 +174,12 @@ e add panscan +0.1                     #      in
 #@ add chapter 1                        #         next
 #E cycle edition                        # next edition
 7 cycle-values loop "inf" "no"         # toggle infinite looping
+F1 run "/bin/sh" "-c" "readlink -f '${path}' | xclip -i"
+Shift+F1 run "/bin/sh" "-c" "readlink -f '${working-directory} | xclip -i'"
+# clone
+F2 run "/bin/sh" "-c" "mpv '${path}'"
+Shift+F2 quit_watch_later; run "/bin/sh" "-c" "gvim -f ~/.config/mpv ; mpv '${path}'" ;
+F4 set pause yes; run "/bin/sh" "-c" "gvim -f -geom 50x10+400+300 -c 'set guioptions-=m' '${path}.tags'"; set pause no
 #A cycle angle
 #U stop
 
